tests/error/func_arg_unknown.gw
function void my_func(unknown_type unknown_arg){}
